--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,223 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  height: 100vh;
+}
+
+.nav-wrapper {
+  width: 100%;
+  background: #FF9D26;
+  color: white;
+  font-size: 20px;
+  font-family: 'Bebas Neue', cursive;
+}
+
+i.fa-bars {
+  font-size: 30px;
+}
+i.fa-chevron-down {
+  font-size: 15px;
+}
+
+.navbar-toggler {
+  border-color: #000000;
+}
+
+.nav-wrapper ul li {
+  text-transform: uppercase;
+  padding: 0 3px;
+}
+
+.nav-wrapper ul li a {
+  color: #000000;
+}
+
+.nav-wrapper ul li a:hover {
+  color: black;
+}
+
+.dropdown-parent {		/* Overriding Bootstrap CSS */
+  min-width: 6.5rem !important;
+  padding: 0 !important;
+  background-color: #EFF3E1 !important;
+  background-clip: unset !important;
+  border: none !important;
+
+}
+
+#menu-link {
+  padding-top: 8px !important;
+  padding-right: 0.5rem !important;
+  padding-left: 0.5rem !important;
+}
+
+#menu-link:focus, #menu-link:hover {  /* Overriding Bootstrap CSS */
+  background-color: transparent !important;
+}
+
+.dropdown-child {
+  padding-top: 5px !important;
+  padding-right: 0.5rem !important;
+  padding-left: 0.5rem !important;
+  border-top: 1px solid #FF9D26 !important;
+  border-left: none !important;
+  border-right: none !important;
+  border-bottom: none !important;
+  border-radius: 0px !important;
+}
+
+.navbar .navbar-brand {
+  background-image: url("https://mykabuki.ru/theme/images/logo-kabuki-line-black.png");
+  background-position: center;
+  background-size: cover;
+  width: 200px;
+  height: 50px;
+}
+
+li.logo {
+  background-image: url("https://mykabuki.ru/theme/images/logo-kabuki-line-black.png");
+  background-position: center;
+  background-size: cover;
+  width: 150px;
+  height: 50px;
+}
+
+ul li {
+  list-style-type: none;
+  justify-content: space-around;
+}
+
+/*splash-screen*/
+.splash-screen  {
+  width: 100%;
+  height: 100vh;
+  background-image: url("https://s1.1zoom.ru/big0/451/Hamburger_Tomatoes_French_fries_Knife_Black_576869_1280x853.jpg");
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+/*Menu Section*/
+.menu-section {
+  height: 800px;
+}
+
+.menu-section h4 {
+  padding: 20px;
+  letter-spacing: 8px;
+  text-align: center;
+  font-size: 3em;
+  font-family: 'Bebas Neue', cursive;
+}
+
+.menu-list {
+  max-width: 100%;
+}
+.menu-list ul {
+  display: flex;
+  justify-content: space-around;
+}
+
+.menu-list-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style-type: none;
+}
+
+/*Order Card*/
+.order-review {
+  position: fixed;
+  top: 100px;
+  right: 0;
+  min-width: 200px;
+  border-radius: 5px;
+  background: #F2994A;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #F2C94C, #F2994A);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #F2C94C, #F2994A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.order-review img {
+  margin: 10px 0 0 10px;
+  width: 130px;
+}
+.check-info h6 span {
+  font-size: 11px;
+  float: right;
+}
+.card-menu {
+  min-height: 500px;
+  transition: .5s;
+}
+.card-menu:hover {
+  margin-top: 10px;
+  box-shadow: 0 2px 15px 0 #8a8a8a;
+}
+.order-review .card-body .check-info h6 {
+  font-size: 12px;
+}
+.card-text div {
+  display: flex;
+  justify-content: space-between;
+}
+table {
+  width: 100%;
+}
+table thead th {
+  font-size: 12px;
+  padding: 10px !important;
+  border-bottom: none !important;
+  border-top: none !important;
+}
+.item-count,
+.item-price,
+.item-label {
+  padding: 10px !important;
+  font-size: 12px;
+  border-top: 1px dotted #8a8a8a !important;
+}
+
+.item-count,
+.item-price {
+  text-align: center;
+}
+.item-price {
+ color: brown;
+}
+.total-price {
+  float: right;
+}
+
+.order-item-price {
+  color: brown;
+}
+
+.form-check {
+  padding: 0;
+}
+
+.btn.btn-group {
+  padding: 0;
+}
+
+button.send-order {
+  width: 100%;
+  margin-top: 20px;
+  font-family: 'Bebas Neue', cursive;
+  letter-spacing: 2px;
+  opacity: .5;
+}
+button.send-order:hover {
+  background: #EFF3E1;
+  color: black;
+  opacity: 1;
+}
+
+.modal .modal-content {
+  background: #F2994A;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #F2C94C, #F2994A);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #F2C94C, #F2994A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
